--- a/config/west.yml
+++ b/config/west.yml
@@ -1,10 +1,13 @@
+
+
+
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+    - name: slicemk
+      url-base: https://github.com/slicemk
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: slicemk
       revision: main
       import: app/west.yml
   self:
